# cg2o

./: .gitignore  CMakeLists.txt  README.md  testfile
.devcontainer/: devcontainer.json
app/adaptive_cruise_control/cpp_code/: CMakeLists.txt  readme.md
app/adaptive_cruise_control/cpp_code/cmake/: FindCG2O.cmake  FindG2O.cmake
app/adaptive_cruise_control/cpp_code/include/: helper_ampl_setup.hpp  helper_config.hpp
app/adaptive_cruise_control/cpp_code/results/: results_comparison.py  results_comparison_bar.py  results_comparison_performace.py
app/adaptive_cruise_control/cpp_code/src/: main.cpp
app/adaptive_cruise_control/lib/data_saver/: data_loader.hpp  data_loader.py  data_saver.hpp
app/adaptive_cruise_control/lib/mpc_ampl/examples/: example1.cpp
app/adaptive_cruise_control/lib/mpc_ampl/examples/example1_files/: eq_con.mod  ineq_con.mod  main.mod
app/adaptive_cruise_control/lib/mpc_ampl/mpc_ampl_files/: eq_con.mod  main.mod
app/adaptive_cruise_control/lib/mpc_cg2o/: CMakeLists.txt  driving_cycles.h  mpc_formulation.h  mpc_parameters.h  mpc_vertices.h  mpc_vertices.hpp
app/adaptive_cruise_control/lib/mpc_cg2o/mpc_edges/: edge_cost_brake.cpp  edge_cost_energy.h  edge_cost_inner_distance.cpp  edge_dynamics_d_h.h  edge_dynamics_v_h.cpp  edge_dynamics_v_h.h  edge_ineq_d_h_max.h  edge_ineq_d_h_min.cpp  edge_ineq_f_b_change_limit.cpp  edge_ineq_f_b_max.h  edge_ineq_f_t_change_limit.cpp  edge_ineq_f_t_change_limit.h  edge_ineq_f_t_max.cpp  edge_ineq_f_t_max.h
app/adaptive_cruise_control/ros_ws/: ACC_MPC_README.md
app/cpp_code/: CMakeLists.txt
app/cpp_code/config/: config.yaml  config_best_linear.yaml
app/cpp_code/include/: helper_ampl_setup.hpp  helper_config.hpp  helper_optimizer_setup.hpp  mpc_runner.hpp
app/cpp_code/results/: readme.txt  results_comparison.m  results_comparison_iterations.py  results_harvesting.py  results_harvesting_both.py  results_harvesting_two_files.py
app/cpp_code/src/: main.cpp
app/lib/: CMakeLists.txt
app/lib/mpc_ampl/: hints.txt
app/lib/mpc_ampl/examples/: CMakeLists.txt
app/lib/mpc_ampl/examples/example1_files/: cost.mod
app/lib/mpc_ampl/mpc_ampl_files/: cost.mod  ineq_con.mod
app/lib/mpc_cg2o/: mpc_edges.h  mpc_formulation.hpp  mpc_parameters.h
app/lib/mpc_cg2o/mpc_edges/: edge_cost_brake.h  edge_cost_brake_change.cpp  edge_cost_brake_change.h  edge_cost_energy.cpp  edge_cost_inner_distance.cpp  edge_cost_inner_distance.h  edge_cost_traction_change.cpp  edge_cost_traction_change.h  edge_dynamics_d_h.cpp  edge_dynamics_d_h.h  edge_dynamics_v_h.cpp  edge_dynamics_v_h.h  edge_ineq_d_h_max.cpp  edge_ineq_d_h_max.h  edge_ineq_d_h_min.cpp  edge_ineq_d_h_min.h  edge_ineq_f_b_change_limit.cpp  edge_ineq_f_b_change_limit.h  edge_ineq_f_b_max.cpp  edge_ineq_f_b_max.h  edge_ineq_f_b_min.cpp  edge_ineq_f_b_min.h  edge_ineq_f_t_change_limit.cpp  edge_ineq_f_t_change_limit.h  edge_ineq_f_t_max.cpp  edge_ineq_f_t_max.h  edge_ineq_f_t_min.cpp  edge_ineq_f_t_min.h  edge_ineq_v_h_max.cpp  edge_ineq_v_h_max.h  edge_ineq_v_h_min.cpp  edge_ineq_v_h_min.h
app/ros_ws/: ACC_MPC_README.md
cg2o/: CMakeLists.txt
cg2o/core/: CMakeLists.txt  base_fixed_sized_edge_eq.h  base_fixed_sized_edge_ineq.h  sparse_optimizer_al.cpp  sparse_optimizer_al.h  sparse_optimizer_bipm.cpp  sparse_optimizer_bipm.h  sparse_optimizer_for_constraints.h  sparse_optimizer_for_constraints.hpp  sparse_optimizer_ispd.cpp  sparse_optimizer_ispd.h  sparse_optimizer_ispd.hpp  termination_criteria.h  vertex_lagrange_multiplier.h
cg2o/examples/: CMakeLists.txt
cg2o/examples/include/: example_1_vertices_edges.h  example_2_vertices_edges.h  example_3_vertices_edges.h
cg2o/examples/src/: example_1.cpp  example_2.cpp  example_3.cpp
cg2o/solvers/: CMakeLists.txt
cg2o/solvers/eigen/: CMakeLists.txt  linear_solver_eigen_bicgstab.h  linear_solver_eigen_dense_full_lu.h  linear_solver_eigen_dense_partial_lu.h  linear_solver_eigen_dense_qr.h  linear_solver_eigen_ldlt.h  linear_solver_eigen_lscg.h  linear_solver_eigen_lu.h  linear_solver_eigen_qr.h  linear_solver_eigen_svd.h  solver_eigen_bicgstab.cpp  solver_eigen_dense_full_lu.cpp  solver_eigen_dense_partial_lu.cpp  solver_eigen_dense_qr.cpp  solver_eigen_ldlt.cpp  solver_eigen_lscg.cpp  solver_eigen_lu.cpp  solver_eigen_qr.cpp  solver_eigen_svd.cpp
cg2o/solvers/pardiso/: CMakeLists.txt  linear_solver_eigen_pardiso_lu.h  solver_eigen_pardiso_lu.cpp
cg2o/solvers/umfpack/: CMakeLists.txt  linear_solver_eigen_umfpack_lu.h  solver_eigen_umfpack_lu.cpp
cmake/: CompilerSetting.cmake  cg2oConfig.cmake.in
docker/: Dockerfile  readme.txt  startup.sh
scripts/: bashSetup.sh  buildDocker.sh  build_all.sh  runDocker.sh  welcomeMessage.sh
